# oscar-whiskey

./: docker-compose.yml
oscarwhiskey/: Dockerfile  manage.py  pyproject.toml
oscarwhiskey/oscarwhiskey/: asgi.py  settings.py  urls.py  wsgi.py
