[tool.poetry]
name = "oscar-whiskey"
version = "0.1.0"
description = ""
authors = ["Ambroise Laurent <ambroisel@theodo.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
django-oscar = {extras = ["sorl-thumbnail"], version = "^3.1"}
dj-database-url = "^0.5.0"
djoser = "^2.0.3"
psycopg2-binary = "^2.8.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
